--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body,
 html {
   background: #333;
   display: grid;
-  grid-template-columns: 200px auto;
+  grid-template-columns: 250px auto;
   grid-template-rows: 40px auto;
   align-items: stretch;
   height: 100vh;
@@ -33,6 +33,10 @@ nav {
   overflow-x: scroll;
 }
 
+nav > * {
+  flex: 0 0 auto;
+}
+
 side {
   grid-row-start: 2;
   gird-row-end: span 1;
@@ -47,6 +51,7 @@ side {
   flex-wrap: nowrap;
   justify-content: flex-start;
   align-items: stretch;
+  overflow-y: hidden;
 }
 
 main {
@@ -97,4 +102,16 @@ x-renderer {
   display: block;
   height: 100%;
   width: 100%;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.row > * {
+  flex: 1;
 }
