--- a/style.css
+++ b/style.css
@@ -142,3 +142,14 @@ x-renderer {
   flex: 1 1 1px;
   white-space: nowrap;
 }
+
+.tools_section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
+.tools_section > button {
+  flex: 1 1 40px;
+  white-space: nowrap;
+}
